[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nativeblend"
version = "0.1.0"
description = "NativeBlend CLI - Generate 3D models in Blender using AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
    "keyring>=25.5.0",
    "requests>=2.32.0",
    "rich>=13.9.4",
    "websocket-client>=1.8.0",
]

[project.scripts]
nativeblend = "nativeblend.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/nativeblend"]
