[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nativeblend"
version = "0.2.1"
description = "NativeBlend CLI - Build and Edit 3D models in Blender using AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "NativeBlend Team", email = "support@nativeblend.app" }]
keywords = ["blender", "3d", "ai", "generative", "cli", "modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "typer>=0.15.1",
    "keyring>=25.5.0",
    "requests>=2.32.0",
    "rich>=13.9.4",
    "websocket-client>=1.8.0",
    "certifi>=2024.0.0",
]

[project.urls]
Homepage = "https://nativeblend.app"
Repository = "https://github.com/addy999/nativeblend-cli"
Documentation = "https://nativeblend.app"
"Issue Tracker" = "https://github.com/addy999/nativeblend-cli/issues"
Discord = "https://discord.gg/CKKuWpfCCu"

[project.scripts]
nativeblend = "nativeblend.main:app"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/nativeblend"]

[dependency-groups]
dev = ["mypy>=1.19.1", "types-requests>=2.32.4.20260107"]
